--- a/apps/docs-lite-elements/src/pages/docs/context/context-provider.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/context/context-provider.mdx
@@ -20,7 +20,7 @@ To provide a context to a component, you can use the `@provideContext` decorator
 <CodeBlock lang='typescript'>{`@customElement("lite-my-context")
 export class MyElement extends LiteElement {
   @provideContext({ context: myContext, initialValue: { value: "Hello World" }})
-  provider!: LiteContext<typeof myContext>;
+  provider!: ContextProvider<typeof myContext>;
 }`}
 </CodeBlock>
 
@@ -33,21 +33,21 @@ The attribute type can be a `String`, `Number`, `Boolean`, `Object`, or `Array`.
 <CodeBlock lang='typescript'>{`@customElement("lite-my-context")
 export class MyElement extends LiteElement {
   @provideContext({ context: myContext, initialValue: { logger: new Logger() } hydrate: Object})
-  provider!: LiteContext<typeof myContext>;
+  provider!: ContextProvider<typeof myContext>;
 }`}
 </CodeBlock>
 
 Please remember that due the nature of the web components, you need to stringify the data before passing it to the component.
 
-You can use the `stringifiedAttribute` function to do this.
+You can use the `stringifyAttribute` function to do this.
 
-The `stringifiedAttribute` function will convert the data to a string but being sure that the data will be parsed correctly when using JSX in a typescript environment.
+The `stringifyAttribute` function will convert the data to a string but being sure that the data will be parsed correctly when using JSX in a typescript environment.
 
 Due the nature of the web components, you need to stringify the data before passing it to the component, but context can also have properties that cannot be stringified.
 
 Since hydrate will merge the data with the initial value, you can pass only the properties that you want to update.
 
-<CodeBlock lang='jsx'>{`<my-context hydrate-context={stringifiedAttribute<Omit<MyContext, 'logger'>>(data)}>`}</CodeBlock>
+<CodeBlock lang='jsx'>{`<my-context hydrate-context={stringifyAttribute<Omit<MyContext, 'logger'>>(data)}>`}</CodeBlock>
 
 Once you have a context provider, all the children of the provider will have access to the context.
 Please note that the provider must be a parent of the consumer.
@@ -58,11 +58,11 @@ To read the documentation relative to the consumer, click [here](/docs/context/c
   <my-element-consumer></my-element-consumer>
 </my-element-provider>`}</CodeBlock>
 
-If for any reason you don't want to use the `@provideContext` decorator, you can use the `LiteContext` component directly.
+If for any reason you don't want to use the `@provideContext` decorator, you can use the `ContextProvider` component directly.
 
 <CodeBlock lang='typescript'>{`@customElement("lite-my-context")
 export class MyElement extends LiteElement {
-  provider = new LiteContext<typeof myContext>(this, {
+  provider = new ContextProvider<typeof myContext>(this, {
     context: myContext,
     initialValue: {
       value: "Hello World"
