--- a/apps/docs-lite-elements/src/pages/docs/decorators/ref.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/decorators/ref.mdx
@@ -13,7 +13,7 @@ export const getMetadata = () => ({
 
 This decorator, akin to the querySelector, enables you to search for an element within the component tree.
 
-What sets it apart is its ability to search using the value of the data-ref attribute, eliminating the need to define the selector.
+What sets it apart is its ability to search using the value of the data-ref attribute, eliminating the need to define it in the selector.
 
 It accepts a selector and a property, which is then assigned to the found element. Internally, it leverages the ref.
 
