--- a/apps/docs-lite-elements/src/pages/docs/examples/lite-todo-app.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/examples/lite-todo-app.mdx
@@ -126,7 +126,7 @@ export class LiteTodoApp extends WithKita(LiteElement) {
   })
   provider!: ContextProvider<typeof todoContext>;
 
-  @onEvent({ target: 'form', type: 'submit' })
+  @onEvent({ selector: 'form', type: 'submit' })
   submitTodo(event: FormDataEvent) {
     event.preventDefault();
     const form = event.target as HTMLFormElement;
@@ -204,7 +204,7 @@ export class LiteTodo extends WithKita(LiteElement) {
     this.complete = this.checkbox.checked;
   }
 
-  @onEvent({ target: 'input[type="checkbox"]', type: 'change' })
+  @onEvent({ selector: 'input[type="checkbox"]', type: 'change' })
   toggleComplete(event: Event) {
     const checkbox = event.target as HTMLInputElement;
     const todo = this.context.getContext().todos.find((t) => t.id === this.id);
@@ -216,7 +216,7 @@ export class LiteTodo extends WithKita(LiteElement) {
     this.remove();
   }
 
-  @onEvent({ target: 'button', type: 'click' })
+  @onEvent({ selector: 'button', type: 'click' })
   removeTodo() {
     this.context.setContext({
       todos: this.context.getContext().todos.filter((t) => t.id !== this.id),
