--- a/apps/docs-lite-elements/src/pages/docs/examples/lite-counter.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/examples/lite-counter.mdx
@@ -63,12 +63,12 @@ export class LiteCounter extends LiteElement {
   @reactiveProp({ type: Number }) declare value: number;
   @querySelector('[data-text]') countText!: HTMLElement;
 
-  @onEvent({ target: '[data-decrement]', type: 'click' })
+  @onEvent({ selector: '[data-decrement]', type: 'click' })
   decrement() {
     if (this.value > 0) this.value--;
   }
 
-  @onEvent({ target: '[data-increment]', type: 'click' })
+  @onEvent({ selector: '[data-increment]', type: 'click' })
   increment() {
     this.value++;
   }
