feat(#30): Reduce queries decorator to a single @query

--- a/apps/docs-lite-elements/src/pages/docs/examples/lite-counter.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/examples/lite-counter.mdx
@@ -59,24 +59,25 @@ export type LiteCounterProps = {
 };
 
 @customElement('lite-counter')
+@customElement('lite-counter')
 export class LiteCounter extends LiteElement {
-  @reactiveProp({ type: Number }) declare value: number;
-  @querySelector('[data-text]') countText!: HTMLElement;
+  @reactiveProp({ type: Number, reflect: true }) declare value: number;
+  @query({ ref: 'count' }) countText!: HTMLElement;
 
-  @onEvent({ selector: '[data-decrement]', type: 'click' })
+  @onEvent({ ref: 'decrement', type: 'click' })
   decrement() {
     if (this.value > 0) this.value--;
   }
 
-  @onEvent({ selector: '[data-increment]', type: 'click' })
+  @onEvent({ ref: 'increment', type: 'click' })
   increment() {
     this.value++;
   }
 
   @onUpdated('value')
   updateCount() {
-    this.dispatchEvent(new Event('change'));
     this.countText.textContent = this.value.toString();
+    this.dispatchEvent(new Event('change'));
   }
 }
 
