feat(#30): Reduce queries decorator to a single @query

--- a/apps/docs-lite-elements/src/pages/docs/examples/lite-todo-app.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/examples/lite-todo-app.mdx
@@ -94,7 +94,7 @@ In this first snippet we have the `lite-todo-app` component that is responsible 
 
 The features used in this component are:
 
-- `@ref` decorator to query for the elements inside the component that uses the `data-ref` attribute
+- `@query` decorator to query for the elements inside the component that uses the `data-ref` attribute
 - `@provideContext` decorator to provide the context to the children components
 - `@onEvent` decorator to listen for the form submit event
 - `@contextSelector` decorator to select the todos based on the complete status
