--- a/apps/docs-lite-elements/src/pages/docs/examples/lite-counter.mdx
+++ b/apps/docs-lite-elements/src/pages/docs/examples/lite-counter.mdx
@@ -35,12 +35,12 @@ If you want to use the `LiteCounter` component, the only thing you need to do is
 
 This can be done by using the `data-decrement`, `data-increment`, and `data-text` attributes.
 
-<CodeBlock lang="jsx">{`<lite-counter value={value}>
-  <button type="button" data-decrement aria-label="Decrement">
+<CodeBlock lang="jsx">{`<lite-counter count={count}>
+  <button type="button" data-ref="decrement" aria-label="Decrement">
     -
   </button>
-  <span data-text="count">{value}</span>
-  <button type="button" data-increment aria-label="Increment">
+  <span data-ref="count">{count}</span>
+  <button type="button" data-ref="increment" aria-label="Increment">
     +
   </button>
 </lite-counter>`}</CodeBlock>
