feat(#38) Resolve circular deps in @ecopages/core

--- a/apps/docs-radiant/src/pages/docs/core/lite-element.mdx
+++ b/apps/docs-radiant/src/pages/docs/core/lite-element.mdx
@@ -11,7 +11,7 @@ export const getMetadata = () => ({
 # Lite Element
 ---
 
-This is the base class for all Lite Elements. It provides a set of decorators that can be used to define the behavior of the element.
+This is the base class for all Radiant. It provides a set of decorators that can be used to define the behavior of the element.
 
 Please note that this class is not meant to be used directly. Instead, you should extend it to create your own custom elements.
 
