--- a/apps/docs-radiant/src/pages/docs/getting-started/installation.mdx
+++ b/apps/docs-radiant/src/pages/docs/getting-started/installation.mdx
@@ -11,7 +11,7 @@ export const getMetadata = () => ({
 # Installation
 ---
 
-To get started with Lite Elements, you need to install the package in your project. You can do this by running the following command:
+To get started with Radiant, you need to install the package in your project. You can do this by running the following command:
 
 <CodeBlock lang='bash'>
 {`bun install @ecopages/radiant`}
