--- a/apps/docs-radiant/src/pages/docs/core/lite-element.mdx
+++ b/apps/docs-radiant/src/pages/docs/core/lite-element.mdx
@@ -20,5 +20,5 @@ You can use the `@customElement` decorator to define a custom element.
 Go to the [Decorator Section](/docs/decorators/custom-element) to see all the available decorators.
 
 <CodeBlock lang='typescript'>{`@customElement('lc-demo')
-export class MyElement extends LiteElement {}`}
+export class MyElement extends RadiantElement {}`}
 </CodeBlock>
