--- a/apps/docs-radiant/src/pages/docs/decorators/custom-element.mdx
+++ b/apps/docs-radiant/src/pages/docs/decorators/custom-element.mdx
@@ -16,5 +16,5 @@ This is a simple decorator that can be used to define a custom element.
 It is a wrapper around the `customElements.define` method, providing a more concise and readable way to define custom elements.
 
 <CodeBlock lang='typescript'>{`@customElement('lc-demo')
-export class MyElement extends LiteElement`}
+export class MyElement extends RadiantElement`}
 </CodeBlock>
