--- a/apps/docs-radiant/src/pages/docs/mixins/with-kita.mdx
+++ b/apps/docs-radiant/src/pages/docs/mixins/with-kita.mdx
@@ -14,4 +14,4 @@ It's very light and easy to use, and it's a great alternative to other rendering
 Gzip size is around 2kb.
 
 <CodeBlock lang='typescript'>{`@customElement('my-jsx-element')
-export class MyJsxElement extends WithKita(LiteElement) `}</CodeBlock>
+export class MyJsxElement extends WithKita(RadiantElement) `}</CodeBlock>
