feat(#44) added jsr.json to future packages and missing readme in packages

--- a/apps/docs/src/pages/docs/getting-started/introduction.mdx
+++ b/apps/docs/src/pages/docs/getting-started/introduction.mdx
@@ -22,4 +22,4 @@ For CSS, we've chosen to integrate [Tailwind CSS](https://tailwindcss.com/) in c
 
 It's important to note that, contrary to Tailwind CSS's typical recommendations, we advocate for the use of `css` stylesheets with `@apply` directives when using Tailwind CSS with Eco Pages.
 
-As this project is in its infancy, some rough edges are to be expected. If you encounter any issues, we encourage you to report them on our [GitHub repository](https://github.com/andeeplus/ecopages).
+As this project is in its infancy, some rough edges are to be expected. If you encounter any issues, we encourage you to report them on our [GitHub repository](https://github.com/ecopages/ecopages).
