--- a/examples/starter/src/pages/about.mdx
+++ b/examples/starter/src/pages/about.mdx
@@ -1,5 +1,20 @@
+import { BaseLayout } from '@/layouts/base-layout';
+import { DepsManager } from '@ecopages/core';
+
+export const layout = BaseLayout;
+
+
+export const getMetadata = () => ({
+  title: 'Docs | Context Consumer',
+  description: 'The place to learn about @ecopages/radiant',
+})
+
+<div class="prose">
+
 # About Page
 
 ## This is the about page
 
 You can edit this page by opening `src/pages/about.mdx`
+
+</div>
