--- a/apps/docs-radiant/src/pages/docs/examples/lite-todo-app.mdx
+++ b/apps/docs-radiant/src/pages/docs/examples/lite-todo-app.mdx
@@ -1,14 +1,15 @@
-import { DepsManager } from '@ecopages/core';
 import { DocsLayout } from '@/layouts/docs-layout';
 import { CodeBlock } from '@/components/code-block/code-block.kita';
 import { LiteTodoApp } from '@/components/lite-todo-app'
 
 export const layout = DocsLayout;
 
-export const dependencies = DepsManager.collect({
+export const config = {
   importMeta: import.meta,
-  components: [LiteTodoApp]
-})
+  dependencies: {
+    components: [LiteTodoApp]
+  }
+}
 
 export const getMetadata = () => ({
   title: 'Docs | Lite Todo App',
