--- a/packages/core/fixtures/app/src/pages/mdx-test.mdx
+++ b/packages/core/fixtures/app/src/pages/mdx-test.mdx
@@ -1,17 +1,15 @@
 import { Card } from '@/components/card';
 import { BaseLayout } from '@/layouts/base-layout';
 
+export const layout = BaseLayout;
+
 export const config = {
   importMeta: import.meta,
   dependencies: { components: [Card, BaseLayout] }
 }
-
-<BaseLayout class="prose">
 
 # MDX Page
 
 This is a test page.
 
 <Card title="Hello" copy="This is a copy included via tsx" />
-
-</BaseLayout>
