feature(#52) Updated examples, now everything works as expected

--- a/examples/starter-lit-jsx/src/pages/about.mdx
+++ b/examples/starter-lit-jsx/src/pages/about.mdx
@@ -1,11 +1,12 @@
 import { BaseLayout } from '@/layouts/base-layout';
+import { Card } from '@/components/card';
 
 export const layout = BaseLayout;
 
 export const config = {
   importMeta: import.meta,
   dependencies: {
-    components: [BaseLayout]
+    components: [BaseLayout, Card]
   }
 }
 
@@ -21,5 +22,9 @@ export const getMetadata = () => ({
 ## This is the about page
 
 You can edit this page by opening `src/pages/about.mdx`
+
+Due to the way MDX is rendering the content, at the moment is not possible to SSR lit elements in the MDX content. You can still use them but they will be rendered client side.
+
+<Card title="Card title" copy="<a href='/'>Go to homepage</a>" />
 
 </div>
