feature(#61): Enhanced the configuration setup process by implementing a more intuitive and user-friendly Config Builder

--- a/apps/docs/src/pages/docs/getting-started/configuration.mdx
+++ b/apps/docs/src/pages/docs/getting-started/configuration.mdx
@@ -15,17 +15,16 @@ export const getMetadata = () => ({
 You can configure Eco Pages by creating a configuration file in the root of your project. The configuration file should be named \`ecopages.config.js\`.
 
 <CodeBlock lang='typescript'>
-{`import type { EcoPagesConfig } from '@ecopages/core';
+{`import { ConfigBuilder } from '@ecopages/core';
 
-const config: EcoPagesConfig = {
-  rootDir: import.meta.dir,
-    baseUrl: import.meta.env.ECOPAGES_BASE_URL as string,
-  defaultMetadata: {
+const config = await new ConfigBuilder()
+  .setBaseUrl(process.env.ECOPAGES_BASE_URL)
+  .setDefaultMetadata({
     title: 'Your title here',
     description: 'Your description here',
     image: 'https://absolute/url/to-og-img',
-  },
-};
+  })
+  .build();
 
 export default config;
 `}
